--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
+    "daisyui": "^2.49.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
