--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@toast-ui/editor-plugin-color-syntax": "^3.1.0",
     "@toast-ui/react-editor": "^3.2.2",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.3.3",
     "daisyui": "^2.49.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
