--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
