--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,39 +1,24 @@
 {
   "env": {
     "browser": true,
-    "es2021": true,
-    "node": true
+    "es2021": true
   },
-  "parser": "@typescript-eslint/parser",
   "extends": [
-    "next",
-    "next/core-web-vitals",
     "eslint:recommended",
     "plugin:react/recommended",
-    "airbnb",
-    "airbnb/hooks",
-    "airbnb-typescript",
-    "plugin:prettier/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended",
+    "plugin:react/jsx-runtime"
   ],
-  "settings": {
-    "next": {
-      "version": "detect",
-      "rootDir": "packages/client/"
-    }
-  },
+  "overrides": [],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "project": ["tsconfig.json"],
-    "ecmaFeatures": {
-      "jsx": true
-    },
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "react-hooks", "@typescript-eslint"],
+  "plugins": ["react", "@typescript-eslint"],
   "rules": {
-    "prettier/prettier": "error",
-    "react/react-in-jsx-scope": "off",
-    "react/function-component-definition": "off",
-    "react/require-default-props": "off"
+    "react/jsx-curly-brace-presence": "error",
+    "react/prop-types": "off"
   }
 }
