--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.3",
     "daisyui": "^2.49.0",
-    "eslint": "^8.35.0",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,10 +28,19 @@
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.0.0",
+    "eslint": "^8.35.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "2.8.4",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
+    "typescript-eslint": "^0.0.1-alpha.0",
     "vite": "^4.0.0"
   }
 }
