--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "eslint": "^8.35.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "2.8.4",
+    "prettier": "^2.8.4",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "typescript-eslint": "^0.0.1-alpha.0",
