--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
+    "react-js-pagination": "^3.0.3",
     "react-query": "^3.39.3",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/react-js-pagination": "^3.0.4",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "@vitejs/plugin-react": "^3.0.0",
