--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "start": "react-scripts start"
+    "start": "tsc && vite build"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
